# metaverse_rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migration  docker-compose.yml  init.sh  startup.sh
.sqlx/: query-9f4293c8b1dc180c9c412ebc360ebecf5733992257b13001e71e1755914727d7.json  query-9fece11830703ad568661ad5d819c73b97cb23492dbff23c586f9dcf8d09a6e4.json  query-b1e18e18ca234b48b058ca1d788ded6c35a0df519357564175f8f30a747ca591.json  query-d506b9d2222e0d00bbd23654882ed5975bae639a47b3d237463db061a72a99d3.json  query-f28c590fab512e0ed1fa2a54862fcd4ab5c183c0ddc120c85d6582ab84e8268e.json  query-f83b5538a307d70b8566753c2112495daaa0b15776c19d710cfe66aae6e59b23.json  query-f9e46967d7e2d43c96d5ca144aa1e5491c58222c393973307d786fe87239fd65.json
backend/: Cargo.toml
backend/src/: admin_middleware.rs  auth_middleware.rs
backend/src/common/: mod.rs
backend/src/element/: element_templates.rs  mod.rs  space_elements.rs
backend/src/maps/: create_maps.rs  mod.rs
backend/src/space/: create_space.rs  (+1 more)
migrations/: 20250223065435_create_users_table.sql  20250223110031_create_entire_db.sql  20250224152350_final_handling.sql  20250310135743_update_elements.sql  20250316070056_complete_revamp_v2.sql
src/: admin_middleware.rs  auth_middleware.rs  common.rs  main.rs  space_middleware.rs  user.rs
src/common/: mod.rs
src/element/: map_elements.rs  mod.rs
src/maps/: create_maps.rs  get_map.rs  mod.rs
src/space/: create_space.rs  delete_space.rs  get_space.rs  mod.rs
src/user/: mod.rs
src/worlds/: create_world.rs  get_worlds.rs  mod.rs
tests/: common_tests.rs
