[package]
name = "metaverse_v1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
