[package]
name = "metaverse_v1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
once_cell = "1.20.3"
hyper = "1.6.0"
serde_json = "1.0.139"
bytes = "1.10.0"
http-body-util = "*"
uuid = "1.14.0"
bcrypt = "0.17.0"
